# ras-commander

./: .auditor.yaml  .cursorrules  .env.example  .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  404.html  AGENTS.md  CITATION.cff  CLAUDE.md  COMMIT_READY.md  CONTRIBUTING.md  Comprehensive_Library_Guide.md  LICENSE  MANIFEST.in  OUTPUT.md  PLAN_proxmox_docker_setup.md  README.md  ROADMAP.md  RasRemote.md  STYLE_GUIDE.md  TASK.md  VALIDATION_MATRIX.md  api-hdf.md  api-ras.md  api.md  check_notebook.py  example_projects.csv  index.html  mkdocs.yml  objects.inv  pyproject.toml  ras-commander library examples.ipynb  requirements-docs.txt  requirements.txt  run_notebook_test.bat  run_notebook_test.ps1  settings.db  setup.py  sitemap.xml  (+2 more)
.agents/: README.md
.claude/: MANIFEST.md  README.md  settings.json
.codex/: hooks.json
.github/: DOC_BUILD_CHECKLIST.md  pull_request_template.md
.gitignore/: .gitignore
AGENTS/: index.html
DOCUMENTATION_PLAN/: index.html
agent_tasks/: .gitignore  2026-01-05_precipitation_api_standardization.md  2026-01-05_precipitation_api_standardization_COMPLETE.md  2026-01-07_compute_parallel_notebook_migration_plan.md  2026-01-07_geom_df_enhancement_spec.md  2026-04-25_multi_harness_agent_framework_migration_plan.md  2026-04-29_ebfe_validation_matrix_completion_plan.md  2026-05-01_CLB-258_creating_ras_terrain_gap_analysis.md  2026-05-09_CLB-672_davis_event_selection.md  2026-05-09_CLB-674_gridded_precip_examples_inventory.md  2026-05-31_CLB-706_full_6x_roundtrip_real_audit.md  2026-06-22_docs_navigability_audit.md  2026-07-06_precipitation_suite_followup.md  2026-07-07_710_mannings_sensitivity_followup.md  2026-07-07_711_mannings_sensitivity_followup.md  (+29 more)
(+1891 files in other folders)
