[build-system]
requires = ["setuptools>=45", "setuptools_scm[toml]>=6.2"]
build-backend = "setuptools.build_meta"

[project]
name = "ras-commander"
dynamic = ["version"]
description = "A library for automating HEC-RAS operations using python functions."
authors = [{name = "William Katzenmeyer, P.E., C.F.M.", email = "heccommander@gmail.com"}]
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "pandas>=1.0.0",
    "requests>=2.25.0",
    "pathlib>=1.0.1",
    "numpy>=1.18.0",
    "h5py>=3.1.0",
    "matplotlib>=3.3.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=6.2.0",
    "flake8>=3.9.0",
    "black>=21.5b1",
    "sphinx>=3.5.0",
    "sphinx-rtd-theme>=0.5.0",
]

[project.urls]
Homepage = "https://github.com/billk-FM/ras-commander"

[tool.setuptools_scm]
version_scheme = "post-release"
write_to = "ras_commander/_version.py"

[tool.setuptools]
packages = ["ras_commander"]